--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <li><a href="contact.html">Contact</a></li>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio de Caron Adam - BTS SIO SISR</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
