--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                     <li>
                         <a href="#tp">Travaux Pratiques</a>
                         <div class="dropdown-content">
-                            <a href="#tp-reseau">TP Réseau</a>
-                            <a href="#tp-systeme">TP Système</a>
+                            <a href="#TP_Reseau.html">TP Réseau</a>
+                            <a href="#TP_Systeme.html">TP Système</a>
                         </div>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
