--- a/TP_systeme.html
+++ b/TP_systeme.html
@@ -116,7 +116,7 @@
                     Directory Users and Computers(ADUC).</p>
                 <a href="../TP/SYSTEME/TP04_Gestion_des_utilisateurs.pdf" target="_blank">Voir le TP</a>
             </div>
-            <!-- Vous pouvez ajouter d'autres TP ici en copiant la structure de la div "tp-item" -->
+            <!-- ajouter d'autres TP ici en copiant la structure de la div "tp-item" -->
         </div>
         <a href="Pprincipal.html" class="back-link">Retour au portfolio</a>
     </div>
