Update and rename contact-page.html to Contact.html

--- a/Contact.html
+++ b/Contact.html
@@ -121,7 +121,7 @@
             <button type="submit">Envoyer</button>
         </form>
         <div id="message-status"></div>
-        <a href="index.html" class="back-link">Retour au portfolio</a>
+        <a href="Pprincipal.html" class="back-link">Retour au portfolio</a>
     </div>
 
     <script>
