--- a/Ppricipal.html
+++ b/Ppricipal.html
@@ -185,7 +185,7 @@
                             <a href="#TP_systeme.html">TP Système</a>
                         </div>
                     </li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
