--- a/TP_reseau.html
+++ b/TP_reseau.html
@@ -123,7 +123,7 @@
                 <a href="#">Voir le TP</a>
             </div>
         </div>
-        <a href="Pprincipal.html" class="back-link">Retour au portfolio</a>
+        <a href="index.html" class="back-link">Retour au portfolio</a>
     </div>
 </body>
 </html>
