--- a/TP_systeme.html
+++ b/TP_systeme.html
@@ -118,7 +118,7 @@
             </div>
             <!-- ajouter d'autres TP ici en copiant la structure de la div "tp-item" -->
         </div>
-        <a href="Pprincipal.html" class="back-link">Retour au portfolio</a>
+        <a href="index.html" class="back-link">Retour au portfolio</a>
     </div>
 </body>
 </html>
