--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                     <li>
                         <a href="#tp">Travaux Pratiques</a>
                         <div class="dropdown-content">
-                            <a href="#TP_reseau.html">TP Réseau</a>
-                            <a href="#TP_systeme.html">TP Système</a>
+                            <a href="TP_reseau.html">TP Réseau</a>
+                            <a href="TP_systeme.html">TP Système</a>
                         </div>
                     </li>
                     <li><a href="Contact.html">Contact</a></li>
