--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
     </style>
 </head>
 <body class="texture">
+    <noscript>JavaScript est désactivé !</noscript>
     <header>
         <div class="container">
             <nav>
