--- a/Contact.html
+++ b/Contact.html
@@ -111,6 +111,7 @@
     </style>
 </head>
 <body>
+    <div id="header"></div>
     <div class="container">
         <h1>Contactez-moi</h1>
         <form class="contact-form" id="contact-form">
@@ -142,5 +143,6 @@
             }, 1000);
         });
     </script>
+    <script src="loadHeader.js"></script>
 </body>
 </html>
