--- a/TP_reseau.html
+++ b/TP_reseau.html
@@ -91,9 +91,71 @@
         .back-link:hover {
             text-decoration: underline;
         }
+
+        /* Styles du menu de navigation */
+nav {
+    background-color: #3498db; /* Couleur bleu */
+    padding: 15px 0;
+    text-align: center;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+}
+
+nav ul li {
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: bold;
+    transition: color 0.3s ease;
+}
+
+nav ul li a:hover {
+    color: #ecf0f1;
+}
+
+/* Style pour le sous-menu */
+nav ul li {
+    position: relative;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 10px 0;
+    border-radius: 5px;
+}
+
+.dropdown-content a {
+    display: block;
+    padding: 8px 15px;
+    color: #3498db;
+    text-decoration: none;
+}
+
+.dropdown-content a:hover {
+    background-color: #ecf0f1;
+}
+
+nav ul li:hover .dropdown-content {
+    display: block;
+}
+
     </style>
 </head>
 <body>
+    <div id="header"></div> 
     <div class="container">
         <h1>Travaux Pratiques - Réseau</h1>
         <div class="tp-list">
@@ -125,5 +187,6 @@
         </div>
         <a href="index.html" class="back-link">Retour au portfolio</a>
     </div>
+    <script src="loadHeader.js"></script>
 </body>
 </html>
