--- a/header.html
+++ b/header.html
@@ -3,7 +3,6 @@
     <nav>
         <ul>
             <li><a href="index.html#accueil">Accueil</a></li>
-            <li><a href="index.html#a-propos">À propos</a></li>
             <li><a href="index.html#competences">Compétences</a></li>
             <li>
                 <a href="#">Travaux Pratiques</a>
@@ -13,6 +12,7 @@
                 </div>
             </li>
             <li><a href="Contact.html">Contact</a></li>
+            <li><a href="CV.pdf" target="_blank">CV</a></li>
         </ul>
     </nav>
 </header>
