--- a/TP_reseau.html
+++ b/TP_reseau.html
@@ -158,35 +158,28 @@ nav ul li:hover .dropdown-content {
     <div id="header"></div> 
     <div class="container">
         <h1>Travaux Pratiques - Réseau</h1>
-        <div class="tp-list">
-            <div class="tp-item">
-                <h3>TP01 Le reseau local</h3>
-                <p>Description brève du TP sur la mise en place d'un réseau local.</p>
-                <a href="../TP/RESEAU/TP01_Le_reseau_local.pdf" target="_blank">Voir le TP</a>
-            </div>
-            <div class="tp-item">
-                <h3>TP02 Réseau poste à poste</h3>
-                <p>Description brève du TP sur la mise en place d'un réseau poste à poste.</p>
-                <a href="../TP/RESEAU/TP02_Réseau_poste_à_poste.pdf" target="_blank">Voir le TP</a>
-            </div>
-            <div class="tp-item">
-                <h3>TP03 Réseau_Client-Serveur</h3>
-                <p>Description brève du TP sur la mise en place d'un réseau réseau client serveur.</p>
-                <a href="../TP/RESEAU/TP03_Réseau_Client-Serveur_v3.pdf" target="_blank">Voir le TP</a>
-            </div>
-            <div class="tp-item">
-                <h3>TP05 Routage inter Vlan</h3>
-                <p>Description brève du TP sur le routage inter vlan</p>
-                <a href="../TP/RESEAU/TP05_Routage_inter_Vlan.pdf" target="_blank">Voir le TP</a>
-            </div>
-            <div class="tp-item">
-                <h3>Sécurisation d'un réseau WiFi</h3>
-                <p>Description brève du TP sur la sécurisation d'un réseau WiFi.</p>
-                <a href="#">Voir le TP</a>
-            </div>
-        </div>
-        <a href="index.html" class="back-link">Retour au portfolio</a>
+<div class="tp-list">
+    <div class="tp-item">
+        <h3>TP01 Le reseau local</h3>
+        <p>Description brève du TP sur la mise en place d'un réseau local.</p>
+        <a href="reseau/TP01_Le_reseau_local.pdf" target="_blank">Voir le TP</a>
     </div>
+    <div class="tp-item">
+        <h3>TP02 Réseau poste à poste</h3>
+        <p>Description brève du TP sur la mise en place d'un réseau poste à poste.</p>
+        <a href="reseau/TP02_Réseau_poste_à_poste.pdf" target="_blank">Voir le TP</a>
+    </div>
+    <div class="tp-item">
+        <h3>TP03 Réseau_Client-Serveur</h3>
+        <p>Description brève du TP sur la mise en place d'un réseau client-serveur.</p>
+        <a href="reseau/TP03_Réseau_Client-Serveur_v3.pdf" target="_blank">Voir le TP</a>
+    </div>
+    <div class="tp-item">
+        <h3>TP05 Routage inter Vlan</h3>
+        <p>Description brève du TP sur le routage inter VLAN.</p>
+        <a href="reseau/TP05_Routage_inter_Vlan.pdf" target="_blank">Voir le TP</a>
+    </div>
+</div>
     <script src="loadHeader.js"></script>
 </body>
 </html>
