--- a/TP_systeme.html
+++ b/TP_systeme.html
@@ -156,32 +156,31 @@ nav ul li:hover .dropdown-content {
     </style>
 </head>
 <body>
-    <div id="header"></div>  <!-- Le header sera chargé ici -->
-    <div class="container">
-        <h1>Travaux Pratiques - Système</h1>
-        <div class="tp-list">
-            <div class="tp-item">
-                <h3>TP01 Configuration Windows</h3>
-                <p>Configuration de base d’un système Windows.</p>
-                <a href="../TP/SYSTEME/TP01_Config_de_base de_W_Version_Etudiants.pdf" target="_blank">Voir le TP</a>
-            </div>
-            <div class="tp-item">
-                <h3>TP02 config périphérique Cisco</h3>
-                <p>Object : Apprendre à configurer les paramètres initiaux des
-                    périphériques Cisco, à sécuriser l'accès et à assurer la connectivité de base dans un
-                    réseau local..</p>
-                <a href="../TP/SYSTEME/TP02_Configuration_Parametres_initiaux_V2.pdf" target="_blank">Voir le TP</a>
-            </div>
-            <div class="tp-item">
-                <h3>TP04 Gestion des utilisateurs</h3>
-                <p>Objectif : Acquérir des compétences pratiques dans l'administration des utilisateurs à l'aide de PowerShell et d'Active
-                    Directory Users and Computers(ADUC).</p>
-                <a href="../TP/SYSTEME/TP04_Gestion_des_utilisateurs.pdf" target="_blank">Voir le TP</a>
-            </div>
-            <!-- ajouter d'autres TP ici en copiant la structure de la div "tp-item" -->
+<div id="header"></div>  <!-- Le header sera chargé ici -->
+<div class="container">
+    <h1>Travaux Pratiques - Système</h1>
+    <div class="tp-list">
+        <div class="tp-item">
+            <h3>TP01 Configuration Windows</h3>
+            <p>Configuration de base d’un système Windows.</p>
+            <a href="systeme/TP01_Config_de_base_de_W_Version_Etudiants.pdf" target="_blank">Voir le TP</a>
         </div>
-        <a href="index.html" class="back-link">Retour au portfolio</a>
+        <div class="tp-item">
+            <h3>TP02 Config périphérique Cisco</h3>
+            <p>Objectif : Apprendre à configurer les paramètres initiaux des
+                périphériques Cisco, à sécuriser l'accès et à assurer la connectivité de base dans un
+                réseau local.</p>
+            <a href="systeme/TP02_Configuration_Parametres_initiaux_V2.pdf" target="_blank">Voir le TP</a>
+        </div>
+        <div class="tp-item">
+            <h3>TP04 Gestion des utilisateurs</h3>
+            <p>Objectif : Acquérir des compétences pratiques dans l'administration des utilisateurs à l'aide de PowerShell et d'Active
+                Directory Users and Computers (ADUC).</p>
+            <a href="systeme/TP04_Gestion_des_utilisateurs.pdf" target="_blank">Voir le TP</a>
+        </div>
     </div>
+    <a href="index.html" class="back-link">Retour au portfolio</a>
+</div>
     <script src="loadHeader.js"></script>
 </body>
 </html>
