--- a/TP_reseau.html
+++ b/TP_reseau.html
@@ -161,22 +161,22 @@ nav ul li:hover .dropdown-content {
 <div class="tp-list">
     <div class="tp-item">
         <h3>TP01 Le reseau local</h3>
-        <p>Description brève du TP sur la mise en place d'un réseau local.</p>
+        <p>Mise en place d'un réseau local simple avec adressage IP statique et configuration de base des équipements réseau. Ce TP permet de comprendre le rôle du DHCP, du NAT et des passerelles par défaut.</p>
         <a href="reseau/TP01_Le_reseau_local.pdf" target="_blank">Voir le TP</a>
     </div>
     <div class="tp-item">
         <h3>TP02 Réseau poste à poste</h3>
-        <p>Description brève du TP sur la mise en place d'un réseau poste à poste.</p>
+        <p>Configuration d’un réseau entre plusieurs postes sans serveur central. Mise en place du partage de fichiers et d’imprimantes, avec gestion des autorisations d'accès et de la résolution de noms en local.</p>
         <a href="reseau/TP02_Réseau_poste_à_poste.pdf" target="_blank">Voir le TP</a>
     </div>
     <div class="tp-item">
         <h3>TP03 Réseau_Client-Serveur</h3>
-        <p>Description brève du TP sur la mise en place d'un réseau client-serveur.</p>
+        <p>Mise en place d’un réseau avec un serveur central assurant l'authentification des utilisateurs et la gestion des ressources partagées. Configuration d'un Active Directory, gestion des utilisateurs, et contrôle des accès.</p>
         <a href="reseau/TP03_Réseau_Client-Serveur_v3.pdf" target="_blank">Voir le TP</a>
     </div>
     <div class="tp-item">
         <h3>TP05 Routage inter Vlan</h3>
-        <p>Description brève du TP sur le routage inter VLAN.</p>
+        <p>Configuration d’un réseau segmenté en plusieurs VLANs pour améliorer la sécurité et la gestion du trafic. Mise en place du routage entre VLANs à l’aide d’un routeur ou d’un switch de niveau 3.</p>
         <a href="reseau/TP05_Routage_inter_Vlan.pdf" target="_blank">Voir le TP</a>
     </div>
 </div>
