--- a/TP_systeme.html
+++ b/TP_systeme.html
@@ -162,20 +162,17 @@ nav ul li:hover .dropdown-content {
     <div class="tp-list">
         <div class="tp-item">
             <h3>TP01 Configuration Windows</h3>
-            <p>Configuration de base d’un système Windows.</p>
+            <p>Installation et configuration d’un système Windows (Windows 10/11 ou Windows Server). Configuration des paramètres réseau, des mises à jour, et des stratégies de sécurité de base.</p>
             <a href="systeme/TP01_Config_de_base_de_W_Version_Etudiants.pdf" target="_blank">Voir le TP</a>
         </div>
         <div class="tp-item">
             <h3>TP02 Config périphérique Cisco</h3>
-            <p>Objectif : Apprendre à configurer les paramètres initiaux des
-                périphériques Cisco, à sécuriser l'accès et à assurer la connectivité de base dans un
-                réseau local.</p>
+            <p>Apprentissage des commandes de base sur les équipements Cisco (routeurs et switches). Configuration des interfaces, de l’accès SSH/Telnet, des VLANs et de la connectivité réseau.</p>
             <a href="systeme/TP02_Configuration_Parametres_initiaux_V2.pdf" target="_blank">Voir le TP</a>
         </div>
         <div class="tp-item">
             <h3>TP04 Gestion des utilisateurs</h3>
-            <p>Objectif : Acquérir des compétences pratiques dans l'administration des utilisateurs à l'aide de PowerShell et d'Active
-                Directory Users and Computers (ADUC).</p>
+            <p>Administration des utilisateurs et groupes dans un environnement Windows Server. Utilisation de PowerShell, de l’outil Active Directory Users and Computers (ADUC) pour créer, gérer et restreindre les utilisateurs et leurs permissions./p>
             <a href="systeme/TP04_Gestion_des_utilisateurs.pdf" target="_blank">Voir le TP</a>
         </div>
     </div>
