--- a/index.html
+++ b/index.html
@@ -222,25 +222,25 @@
         </section>
 
         <section id="tp">
-            <h2>Mes Travaux Pratiques</h2>
-            <div id="tp-reseau">
-                <h3>TP Réseau</h3>
-                <ul>
-                    <li>Configuration d'un switch Cisco</li>
-                    <li>Mise en place d'un réseau VLAN</li>
-                    <li>Sécurisation d'un réseau WiFi</li>
-                    <li>Déploiement d'un serveur DHCP</li>
-                </ul>
-            </div>
-            <div id="tp-systeme">
-                <h3>TP Système</h3>
-                <ul>
-                    <li>Installation et configuration d'un serveur Windows Server</li>
-                    <li>Déploiement d'un service DHCP sous Linux</li>
-                    <li>Mise en place d'une politique de sauvegarde</li>
-                    <li>Configuration d'un pare-feu pfSense</li>
-                </ul>
-            </div>
+<div class="container">
+    <h2>Mes Travaux Pratiques</h2>
+
+    <h3>TP Réseau</h3>
+    <ul>
+        <li><a href="reseau/TP01_Le_reseau_local.pdf" target="_blank">Configuration d’un switch Cisco</a></li>
+        <li><a href="reseau/TP05_Routage_inter_Vlan.pdf" target="_blank">Mise en place d’un réseau VLAN</a></li>
+        <li><a href="reseau/TP_Securisation_WiFi.pdf" target="_blank">Sécurisation d’un réseau WiFi</a></li>
+        <li><a href="reseau/TP_DHCP.pdf" target="_blank">Déploiement d’un serveur DHCP</a></li>
+    </ul>
+
+    <h3>TP Système</h3>
+    <ul>
+        <li><a href="systeme/TP01_Config_de_base_de_W_Version_Etudiants.pdf" target="_blank">Installation et configuration d’un serveur Windows Server</a></li>
+        <li><a href="systeme/TP02_Configuration_Parametres_initiaux_V2.pdf" target="_blank">Déploiement d’un service DHCP sous Linux</a></li>
+        <li><a href="systeme/TP_Sauvegarde.pdf" target="_blank">Mise en place d’une politique de sauvegarde</a></li>
+        <li><a href="systeme/TP_Parefeu_pfSense.pdf" target="_blank">Configuration d’un pare-feu pfSense</a></li>
+    </ul>
+</div>
         </section>
 
         <section id="contact">
