--- a/Contact.html
+++ b/Contact.html
@@ -175,13 +175,13 @@ nav ul li:hover .dropdown-content {
     <div id="header"></div>
     <div class="container">
         <h1>Contactez-moi</h1>
-        <form class="contact-form" id="contact-form">
-            <input type="text" name="name" placeholder="Votre nom" required>
-            <input type="email" name="email" placeholder="Votre email" required>
-            <input type="text" name="subject" placeholder="Sujet" required>
-            <textarea name="message" placeholder="Votre message" required></textarea>
-            <button type="submit">Envoyer</button>
-        </form>
+<form class="contact-form" id="contact-form" action="https://formspree.io/f/TON_CODE_FORMSPREE" method="POST">
+    <input type="text" name="name" placeholder="Votre nom" required>
+    <input type="email" name="email" placeholder="Votre email" required>
+    <input type="text" name="subject" placeholder="Sujet" required>
+    <textarea name="message" placeholder="Votre message" required></textarea>
+    <button type="submit">Envoyer</button>
+</form>
         <div id="message-status"></div>
         <a href="index.html" class="back-link">Retour au portfolio</a>
     </div>
