--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
         <ul>
             <li><a href="index.html#accueil">Accueil</a></li>
             <li><a href="index.html#competences">Compétences</a></li>
-            <li><a href="projets.html">Projets</a></li>
+            <li><a href="projet.html">Projets</a></li>
             <li>
                 <a href="#">Travaux Pratiques</a>
                 <div class="dropdown-content">
