--- a/Contact.html
+++ b/Contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- HEADER -->
+    <!-- HEADER chargé dynamiquement -->
     <div id="header"></div>
 
     <!-- MAIN CONTENT -->
@@ -40,24 +40,52 @@
 
     <!-- SCRIPTS -->
     <script>
-        // Gestion de l'envoi du formulaire avec confirmation
-        document.getElementById('contact-form').addEventListener('submit', function(e) {
-            e.preventDefault();
+        // Vérification du chargement de la page et du header
+        document.addEventListener("DOMContentLoaded", function() {
+            // Chargement du header
+            fetch("header.html")
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error(`Erreur HTTP: ${response.status}`);
+                    }
+                    return response.text();
+                })
+                .then(data => {
+                    document.getElementById("header").innerHTML = data;
+                })
+                .catch(error => {
+                    console.error("Erreur lors du chargement du header :", error);
+                });
 
-            const formData = new FormData(this);
-            fetch(this.action, {
-                method: "POST",
-                body: formData,
-                headers: { 'Accept': 'application/json' }
-            }).then(response => {
-                if (response.ok) {
-                    document.getElementById('message-status').textContent = "Message envoyé avec succès !";
-                    document.getElementById('message-status').className = 'success';
-                    this.reset();
-                    setTimeout(() => {
-                        document.getElementById('message-status').textContent = '';
-                        document.getElementById('message-status').className = '';
-                    }, 5000);
-                } else {
-                    document.getElementById('message-status').textContent = "Une erreur est survenue, veuillez réessayer.";
-            
+            // Gestion de l'envoi du formulaire avec confirmation
+            document.getElementById('contact-form').addEventListener('submit', function(e) {
+                e.preventDefault();
+
+                const formData = new FormData(this);
+                fetch(this.action, {
+                    method: "POST",
+                    body: formData,
+                    headers: { 'Accept': 'application/json' }
+                }).then(response => {
+                    const messageStatus = document.getElementById('message-status');
+                    if (response.ok) {
+                        messageStatus.textContent = "Message envoyé avec succès !";
+                        messageStatus.className = 'success';
+                        this.reset();
+                        setTimeout(() => {
+                            messageStatus.textContent = '';
+                            messageStatus.className = '';
+                        }, 5000);
+                    } else {
+                        messageStatus.textContent = "Une erreur est survenue, veuillez réessayer.";
+                        messageStatus.className = 'error';
+                    }
+                }).catch(() => {
+                    document.getElementById('message-status').textContent = "Problème de connexion, vérifiez votre réseau.";
+                    document.getElementById('message-status').className = 'error';
+                });
+            });
+        });
+    </script>
+</body>
+</html>
