--- a/Contact.html
+++ b/Contact.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- HEADER chargé dynamiquement -->
+    <!-- HEADER -->
     <div id="header"></div>
 
     <!-- MAIN CONTENT -->
-    <main class="container contact-section">
-        <section>
+    <main>
+        <div class="container">
             <h1>Contactez-moi</h1>
             <p>N'hésitez pas à me contacter pour toute question ou collaboration.</p>
 
@@ -26,64 +26,43 @@
                 </form>
                 <div id="message-status"></div>
             </div>
-            
+
             <a href="index.html" class="back-link">Retour au portfolio</a>
-        </section>
+        </div>
     </main>
 
     <!-- FOOTER -->
     <footer>
-        <div class="container">
-            <p>&copy; 2024 Caron Adam - Tous droits réservés</p>
-        </div>
+        <p>&copy; 2024 Caron Adam - Tous droits réservés</p>
     </footer>
 
     <!-- SCRIPTS -->
+    <script src="loadHeader.js"></script>
     <script>
-        // Vérification du chargement de la page et du header
-        document.addEventListener("DOMContentLoaded", function() {
-            // Chargement du header
-            fetch("header.html")
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error(`Erreur HTTP: ${response.status}`);
-                    }
-                    return response.text();
-                })
-                .then(data => {
-                    document.getElementById("header").innerHTML = data;
-                })
-                .catch(error => {
-                    console.error("Erreur lors du chargement du header :", error);
-                });
+        document.getElementById('contact-form').addEventListener('submit', function(e) {
+            e.preventDefault();
 
-            // Gestion de l'envoi du formulaire avec confirmation
-            document.getElementById('contact-form').addEventListener('submit', function(e) {
-                e.preventDefault();
-
-                const formData = new FormData(this);
-                fetch(this.action, {
-                    method: "POST",
-                    body: formData,
-                    headers: { 'Accept': 'application/json' }
-                }).then(response => {
-                    const messageStatus = document.getElementById('message-status');
-                    if (response.ok) {
-                        messageStatus.textContent = "Message envoyé avec succès !";
-                        messageStatus.className = 'success';
-                        this.reset();
-                        setTimeout(() => {
-                            messageStatus.textContent = '';
-                            messageStatus.className = '';
-                        }, 5000);
-                    } else {
-                        messageStatus.textContent = "Une erreur est survenue, veuillez réessayer.";
-                        messageStatus.className = 'error';
-                    }
-                }).catch(() => {
-                    document.getElementById('message-status').textContent = "Problème de connexion, vérifiez votre réseau.";
+            const formData = new FormData(this);
+            fetch(this.action, {
+                method: "POST",
+                body: formData,
+                headers: { 'Accept': 'application/json' }
+            }).then(response => {
+                if (response.ok) {
+                    document.getElementById('message-status').textContent = "Message envoyé avec succès !";
+                    document.getElementById('message-status').className = 'success';
+                    this.reset();
+                    setTimeout(() => {
+                        document.getElementById('message-status').textContent = '';
+                        document.getElementById('message-status').className = '';
+                    }, 5000);
+                } else {
+                    document.getElementById('message-status').textContent = "Une erreur est survenue, veuillez réessayer.";
                     document.getElementById('message-status').className = 'error';
-                });
+                }
+            }).catch(error => {
+                document.getElementById('message-status').textContent = "Erreur de connexion, veuillez réessayer.";
+                document.getElementById('message-status').className = 'error';
             });
         });
     </script>
