--- a/projet.html
+++ b/projet.html
@@ -10,7 +10,7 @@
     <div id="header"></div>
 
     <main class="container">
-        <h1 class="page-title">Projets</h1>
+        <h1 class="projets-title">Projets</h1>
 
         <div class="projet-container">
             <!-- Première case (vide pour l’instant) -->
