--- a/projet.html
+++ b/projet.html
@@ -35,12 +35,13 @@
                 </ul>
                 
                 <h3>Documents du projet :</h3>
-                <ul>
-                    <li><a href="projet1/docs/projet1/Projet_GPO_Etape_1.docx" target="_blank">Étape 1 : Mise en place d’Active Directory</a></li>
-                    <li><a href="projet1/docs/projet_gpo2.pdf" target="_blank">Étape 2 : Configuration des OUs et GPO</a></li>
-                    <li><a href="projet1/docs/projet_gpo3.pdf" target="_blank">Étape 3 : Gestion des permissions et ressources</a></li>
-                    <li><a href="projet1/docs/projet_gpo4.pdf" target="_blank">Étape 4 : Sécurisation et tests</a></li>
-                </ul>
+                    <ul>
+                        <li><a href="projet1/Projet_GPO_Etape_1.docx" target="_blank">Étape 1 : Mise en place d’Active Directory</a></li>
+                        <li><a href="projet1/Projet_GPO_Etape_2.docx" target="_blank">Étape 2 : Configuration des OUs et GPO</a></li>
+                        <li><a href="projet1/Projet_GPO_Etape_3.docx" target="_blank">Étape 3 : Gestion des permissions et ressources</a></li>
+                        <li><a href="projet1/Projet_GPO_Etape_4.docx" target="_blank">Étape 4 : Sécurisation et tests</a></li>
+                    </ul>
+
             </div>
         </div>
 
