--- a/projet.html
+++ b/projet.html
@@ -13,10 +13,26 @@
         <h1 class="projets-title">Projets</h1>
 
         <div class="projet-container">
-            <!-- Première case (vide pour l’instant) -->
+            <!-- Projet 1: Gestion de Services IT -->
             <div class="projet-box projet-left">
-                <h2>Projet 1</h2>
-                <p>À compléter...</p>
+                <h2>Gestion de Services IT</h2>
+                <p>Ce projet porte sur l’installation et la gestion de services informatiques pour une entreprise.</p>
+                <h3>Services et technologies abordés :</h3>
+                <ul>
+                    <li>Installation et configuration de **GLPI** pour la gestion des tickets IT.</li>
+                    <li>Mise en place d’un serveur **NextCloud** pour le stockage et le partage sécurisé.</li>
+                    <li>Déploiement et configuration d’un **serveur WordPress** sous Debian 11.</li>
+                    <li>Gestion des ressources de stockage avec **FSRM** sur Windows Server.</li>
+                    <li>Installation et configuration du pare-feu **IPFire**.</li>
+                </ul>
+                <h3>Documents du projet :</h3>
+                    <ul>
+                        <li><a href="projet1/TP09_GLPI.pdf" target="_blank">Installation et configuration de GLPI</a></li>
+                        <li><a href="projet1/installation_de_NextCloud_sur_Debian.pdf" target="_blank">Installation de Nextcloud sur Debian</a></li>
+                        <li><a href="projet1/TP06_Gestionnaire_de_ressources_du_serveur_de_fichiers_(FSRM).pdf" target="_blank">Gestion des quotas avec FSRM</a></li>
+                        <li><a href="projet1/Installer_un_serveur_web_sur_Debian_11_et_y_déployer_WordPress.pdf" target="_blank">Déploiement d’un serveur WordPress</a></li>
+                        <li><a href="projet1/2_Installation_et_Configuration_d_IPFire.pdf" target="_blank">Installation et configuration d’IPFire</a></li>
+                   </ul>
             </div>
 
             <!-- Deuxième case avec les infos GPO -->
@@ -33,15 +49,13 @@
                     <li>Configuration du pare-feu avec IPFire/PfSense.</li>
                     <li>Tests et validation de l'infrastructure.</li>
                 </ul>
-                
                 <h3>Documents du projet :</h3>
                     <ul>
-                        <li><a href="projet1/Projet_GPO_Etape_1.docx" target="_blank">Étape 1 : Mise en place d’Active Directory</a></li>
-                        <li><a href="projet1/Projet_GPO_Etape_2.docx" target="_blank">Étape 2 : Configuration des OUs et GPO</a></li>
-                        <li><a href="projet1/Projet_GPO_Etape_3.docx" target="_blank">Étape 3 : Gestion des permissions et ressources</a></li>
-                        <li><a href="projet1/Projet_GPO_Etape_4.docx" target="_blank">Étape 4 : Sécurisation et tests</a></li>
+                        <li><a href="projet1/Projet_GPO_Etape_1.pdf" target="_blank">Étape 1 : Mise en place d’Active Directory</a></li>
+                        <li><a href="projet1/Projet_GPO_Etape_2_v2.pdf" target="_blank">Étape 2 : Configuration des OUs et GPO</a></li>
+                        <li><a href="projet1/Projet_GPO_Etape_3.pdf" target="_blank">Étape 3 : Gestion des permissions et ressources</a></li>
+                        <li><a href="projet1/Projet_GPO_Etape_4.pdf" target="_blank">Étape 4 : Sécurisation et tests</a></li>
                     </ul>
-
             </div>
         </div>
 
