--- a/projet.html
+++ b/projet.html
@@ -16,7 +16,7 @@
             <!-- Projet 1: Gestion de Services IT -->
             <div class="projet-box projet-left">
                 <h2>Gestion de Services IT</h2>
-                <p>Ce projet porte sur l’installation et la gestion de services informatiques pour une entreprise.</p>
+                <p>Ce projet porte sur l’installation et la gestion de services informatiques pour une entreprise. Il est composé de 5 VM, une ipfire, une WinServ Active Directory, une Win10 utilisateur, un serveur xubuntu et un serveur debian. </p>
                 <h3>Services et technologies abordés :</h3>
                 <ul>
                     <li>Installation et configuration de **GLPI** pour la gestion des tickets IT.</li>
