--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
         <section id="a-propos">
             <h2>À propos de moi</h2>
-            <p>Je suis passionné par les systèmes et réseaux informatiques, ainsi que par le développement web. Mon parcours en BTS SIO SISR m'a permis de développer des compétences solides dans ces domaines.</p>
+            <p>Je suis passionné par les systèmes et réseaux informatiques, ainsi que par le développement web. Mon parcours en BTS SIO SISR m'a permis de développer des compétences solides dans une multitude de domaine.</p>
         </section>
 
         <section id="competences">
