--- a/header.html
+++ b/header.html
@@ -5,6 +5,7 @@
             <li><a href="index.html#accueil">Accueil</a></li>
             <li><a href="index.html#competences">Compétences</a></li>
             <li><a href="projet.html">Projets</a></li>
+            <li><a href="stage.html">Projets</a></li>
             <li>
                 <a href="#">Travaux Pratiques</a>
                 <div class="dropdown-content">
