--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
     <nav>
         <ul>
             <li><a href="index.html#accueil">Accueil</a></li>
-            <li><a href="index.html#competences">Compétences</a></li>
+            <li><a href="veille.html">Projets</a></li>
             <li><a href="projet.html">Projets</a></li>
             <li><a href="stage.html">Projets</a></li>
             <li>
