--- a/header.html
+++ b/header.html
@@ -3,9 +3,9 @@
     <nav>
         <ul>
             <li><a href="index.html#accueil">Accueil</a></li>
-            <li><a href="veille.html">Projets</a></li>
+            <li><a href="veille.html">Veille</a></li>
             <li><a href="projet.html">Projets</a></li>
-            <li><a href="stage.html">Projets</a></li>
+            <li><a href="stage.html">Stage</a></li>
             <li>
                 <a href="#">Travaux Pratiques</a>
                 <div class="dropdown-content">
