--- a/index.html
+++ b/index.html
@@ -195,32 +195,46 @@
             <p>Je suis passionné par les systèmes et réseaux informatiques, ainsi que par le développement web. Mon parcours en BTS SIO SISR m'a permis de développer des compétences solides dans une multitude de domaine.</p>
         </section>
 
-        <section id="competences">
-            <h2>Mes Compétences</h2>
-            <div class="skills">
-                <div class="skill">
-                    <div class="skill-icon">&#128736;</div>
-                    <h3>HTML</h3>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 90%;"></div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <div class="skill-icon">&#127912;</div>
-                    <h3>CSS</h3>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 85%;"></div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <div class="skill-icon">&#128187;</div>
-                    <h3>JavaScript</h3>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 75%;"></div>
-                    </div>
-                </div>
+<section id="competences">
+    <h2>Mes Compétences</h2>
+    <div class="skills">
+        <div class="skill">
+            <img src="imgcompétance/desckentral-1024x268.png" alt="Desktop Central" class="skill-icon" />
+            <h3>Desktop Central</h3>
+            <div class="progress-bar">
+                <div class="progress" style="width: 90%;"></div>
             </div>
-        </section>
+        </div>
+        <div class="skill">
+            <img src="imgcompétance/Cisco-Webex-Calling.png" alt="Cisco Webex" class="skill-icon" />
+            <h3>Cisco Webex</h3>
+            <div class="progress-bar">
+                <div class="progress" style="width: 85%;"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <img src="imgcompétance/PictoGlpi.png" alt="GLPI" class="skill-icon" />
+            <h3>GLPI</h3>
+            <div class="progress-bar">
+                <div class="progress" style="width: 80%;"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <img src="imgcompétance/Zabbix_logo_square.svg.png" alt="Zabbix" class="skill-icon" />
+            <h3>Zabbix</h3>
+            <div class="progress-bar">
+                <div class="progress" style="width: 75%;"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <img src="imgcompétance/AVM-LOGO-GENETEC-2018.png" alt="Genetec" class="skill-icon" />
+            <h3>Genetec</h3>
+            <div class="progress-bar">
+                <div class="progress" style="width: 70%;"></div>
+            </div>
+        </div>
+    </div>
+</section>
 
         <section id="tp">
 <div class="container">
