--- a/index.html
+++ b/index.html
@@ -199,32 +199,36 @@
     <h2>Mes Compétences</h2>
     <div class="skills">
         <div class="skill">
-            <img src="imgcompétance/deskcentral-1024x268.png" alt="Desktop Central">
+            <img src="imgcompétance/desckentral-1024x268.png" alt="Desktop Central" class="skill-icon" />
             <h3>Desktop Central</h3>
+            <div class="progress-bar">
+                <div class="progress" style="width: 90%;"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <img src="imgcompétance/Cisco-Webex-Calling.png" alt="Cisco Webex" class="skill-icon" style="" />
+            <h3>Cisco Webex</h3>
             <div class="progress-bar">
                 <div class="progress" style="width: 85%;"></div>
             </div>
         </div>
-
         <div class="skill">
-            <img src="imgcompétance/Cisco-Webex-Calling.png" alt="Cisco Webex">
-            <h3>Cisco Webex</h3>
+            <img src="imgcompétance/PictoGlpi.png" alt="GLPI" class="skill-icon" />
+            <h3>GLPI</h3>
             <div class="progress-bar">
                 <div class="progress" style="width: 80%;"></div>
             </div>
         </div>
-
         <div class="skill">
-            <img src="imgcompétance/PictoGlpi.png" alt="GLPI">
-            <h3>GLPI</h3>
+            <img src="imgcompétance/Zabbix_logo_square.svg.png" alt="Zabbix" class="skill-icon" />
+            <h3>Zabbix</h3>
             <div class="progress-bar">
                 <div class="progress" style="width: 75%;"></div>
             </div>
         </div>
-
         <div class="skill">
-            <img src="imgcompétance/Zabbix_logo_square.svg" alt="Zabbix">
-            <h3>Zabbix</h3>
+            <img src="imgcompétance/AVM-LOGO-GENETEC-2018.png" alt="Genetec" class="skill-icon" />
+            <h3>Genetec</h3>
             <div class="progress-bar">
                 <div class="progress" style="width: 70%;"></div>
             </div>
