--- a/index.html
+++ b/index.html
@@ -220,12 +220,14 @@
             </div>
         </div>
         <div class="skill">
+            <img src="imgcompétance/Zabbix_logo_square.svg.png" alt="Zabbix" class="skill-icon" />
             <h3>Zabbix</h3>
             <div class="progress-bar">
                 <div class="progress" style="width: 75%;"></div>
             </div>
         </div>
         <div class="skill">
+            <img src="imgcompétance/AVM-LOGO-GENETEC-2018.png" alt="Genetec" class="skill-icon" />
             <h3>Genetec</h3>
             <div class="progress-bar">
                 <div class="progress" style="width: 70%;"></div>
