--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         <section id="contact">
             <h2>Contact</h2>
             <p>N'hésitez pas à me contacter pour plus d'informations ou pour discuter de projets intéressants.</p>
-            <p>Email : caron.adam@example.com</p>
+            <p>Email : adam.caron80@gmail.com</p>
         </section>
     </main>
 
