--- a/stage.html
+++ b/stage.html
@@ -54,15 +54,12 @@
         </section>
 
         <section>
-            <h2>Illustrations</h2>
-            <div class="image-gallery">
-                <img src="images/Bitlocker.png" alt="Gestion BitLocker">
-                <img src="images/desktopcentral_deployment.png" alt="Déploiement Desktop Central">
-                <img src="images/fortigate.png" alt="Configuration FortiGate">
-                <img src="images/serviceZABBIX.png" alt="Service Zabbix">
-                <img src="images/règleZABBIX.png" alt="Règle Zabbix">
-                <img src="images/servimp.png" alt="Gestion des imprimantes">
-            </div>
+            <h2>Document</h2>
+            <p>
+                <a href="docs/Epreuve_E5_caron_adam.pdf" target="_blank">
+                    📄 Télécharger le document E5 (PDF)
+                </a>
+            </p>
         </section>
 
         <a href="index.html" class="back-link">Retour au portfolio</a>
