--- a/stage.html
+++ b/stage.html
@@ -56,7 +56,7 @@
         <section>
             <h2>Document</h2>
             <p>
-                <a href="docs/Epreuve_E5_caron_adam.pdf" target="_blank">
+                <a href="Epreuve_E5_caron_adam.pdf" target="_blank">
                     📄 Télécharger le document E5 (PDF)
                 </a>
             </p>
