--- a/stage.html
+++ b/stage.html
@@ -59,6 +59,9 @@
                 <a href="Epreuve_E5_caron_adam.pdf" target="_blank">
                     📄 Télécharger le document E5 (PDF)
                 </a>
+                <a href="Epreuve_E6_caron_adam.pdf" target="_blank">
+                    📄 Télécharger le document E6 (PDF)
+                </a>
             </p>
         </section>
 
