--- a/stage.html
+++ b/stage.html
@@ -53,17 +53,29 @@
             </ul>
         </section>
 
-        <section>
-            <h2>Document</h2>
-            <p>
-                <a href="Epreuve_E5_caron_adam.pdf" target="_blank">
-                    📄 Télécharger le document E5 (PDF)
-                </a>
-                <a href="Epreuve_E6_caron_adam.pdf" target="_blank">
-                    📄 Télécharger le document E6 (PDF)
-                </a>
-            </p>
-        </section>
+<section>
+    <h2>Documents</h2>
+    <p>
+        <a href="Document/Epreuve_E5_caron_adam.pdf" target="_blank">
+            📄 Télécharger le document <strong>E5</strong> (PDF)
+        </a>
+    </p>
+    <p>
+        <a href="Document/E6_Projet1_Caron_Adam.docx" target="_blank">
+            📄 Télécharger le <strong>Projet E6 - 1</strong>
+        </a>
+    </p>
+    <p>
+        <a href="Document/E6_Projet2_Caron_Adam.docx" target="_blank">
+            📄 Télécharger le <strong>Projet E6 - 2</strong>
+        </a>
+    </p>
+    <p>
+        <a href="Document/E6_Projet3_Caron_Adam.docx" target="_blank">
+            📄 Télécharger le <strong>Projet E6 - 3</strong>
+        </a>
+    </p>
+</section>
 
         <a href="index.html" class="back-link">Retour au portfolio</a>
     </main>
