--- a/stage.html
+++ b/stage.html
@@ -75,6 +75,16 @@
             📄 Télécharger le <strong>Projet E6 - 3</strong>
         </a>
     </p>
+    <p>
+        <a href="Document/Amsom.pdf" target="_blank">
+            📄 Télécharger le document <strong>E5</strong> (PDF)
+        </a>
+    </p>
+    <p>
+        <a href="Uniris.pdf" target="_blank">
+            📄 Télécharger le document <strong>E5</strong> (PDF)
+        </a>
+    </p>
 </section>
 
         <a href="index.html" class="back-link">Retour au portfolio</a>
