--- a/stage.html
+++ b/stage.html
@@ -57,32 +57,32 @@
     <h2>Documents</h2>
     <p>
         <a href="Document/Epreuve_E5_caron_adam.pdf" target="_blank">
-            📄 Télécharger le document <strong>E5</strong> (PDF)
+            📄 Fiche <strong>E5</strong> (PDF)
         </a>
     </p>
     <p>
         <a href="Document/E6_Projet1_Caron_Adam.docx" target="_blank">
-            📄 Télécharger le <strong>Projet E6 - 1</strong>
+            📄 Télécharger le <strong>Projet1 E6</strong>
         </a>
     </p>
     <p>
         <a href="Document/E6_Projet2_Caron_Adam.docx" target="_blank">
-            📄 Télécharger le <strong>Projet E6 - 2</strong>
+            📄 Télécharger le <strong>Projet2 E6</strong>
         </a>
     </p>
     <p>
         <a href="Document/E6_Projet3_Caron_Adam.docx" target="_blank">
-            📄 Télécharger le <strong>Projet E6 - 3</strong>
+            📄 Télécharger le <strong>Projet3 E6</strong>
         </a>
     </p>
     <p>
         <a href="Document/Amsom.pdf" target="_blank">
-            📄 Télécharger le document <strong>E5</strong> (PDF)
+            📄 Stage AMSOM HABITAT <strong>2ème année</strong> (PDF)
         </a>
     </p>
     <p>
         <a href="Uniris.pdf" target="_blank">
-            📄 Télécharger le document <strong>E5</strong> (PDF)
+            📄 Stage UNIRIS <strong>1ère année</strong> (PDF)
         </a>
     </p>
 </section>
