--- a/stage.html
+++ b/stage.html
@@ -81,7 +81,7 @@
         </a>
     </p>
     <p>
-        <a href="Uniris.pdf" target="_blank">
+        <a href="Document/Uniris.pdf" target="_blank">
             📄 Stage UNIRIS <strong>1ère année</strong> (PDF)
         </a>
     </p>
